# ComputeKERNEL-Python

./: .gitignore  README.md  main.py  pyproject.toml
computekernel_edu/: __init__.py  arch.py  boot.py  console.py  device.py  driver.py  elfloader.py  fs_ext2.py  fs_tmpfs.py  ipc.py  kernel.py  logger.py  memory.py  module_loader.py  panic.py  power.py  process.py  profiles.py  roadmap.py  safe_mode.py  scheduler.py  security.py  shell.py  syscall.py  teaching.py  thread.py  utils.py  vfs.py
docs/: INSTALLATION.md
tests/: test_boot.py  test_memory.py  test_roadmap.py  test_scheduler.py  test_syscalls.py  test_vfs.py
