[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "computekernel-edu"
version = "0.1.0"
description = "ComputeKERNEL-Edu: Educational Python simulator of a UNIX-like kernel architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
computekernel-edu = "computekernel_edu.shell:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
